api output model mached - ui output interface

--- a/src/Frontend/adi.ch.dev.poa.ui/src/app/app.component.html
+++ b/src/Frontend/adi.ch.dev.poa.ui/src/app/app.component.html
@@ -3,6 +3,7 @@
     {{pageTitle}}
   </div>
   <div class='card-body'>
+    
     <div class='table-responsive'>
       <table class='table'>
         <thead>
@@ -16,11 +17,11 @@
         <tbody>
           <tr *ngFor="let order of orders">
             <td>             
-                {{ order.OrderDate }}
+                {{ order.orderDate }}
             </td>
-            <td>{{ order.Quantity }}</td>
-            <td>{{ order.Price }}</td>
-            <td>{{ order.Details }}</td>
+            <td>{{ order.quantity }}</td>
+            <td>{{ order.price }}</td>
+            <td>{{ order.details }}</td>
             
           </tr>
         </tbody>
