routing rxjs demo component

--- a/src/Frontend/adi.ch.dev.poa.ui/src/app/app.component.html
+++ b/src/Frontend/adi.ch.dev.poa.ui/src/app/app.component.html
@@ -3,7 +3,7 @@
     {{pageTitle}}
   </div>
   <div class='card-body'>
-    
+    <router-outlet></router-outlet>
     <div class='table-responsive'>
       <table class='table'>
         <thead>
